--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Graph Strategy Game</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<h1>Graph Strategy Game</h1>
+
+<svg id="map"></svg>
+
+<script src="main.js"></script>
+</body>
+</html>
