--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head <script src="https://cdn.jsdelivr.net/npm/d3-delaunay@6"></script>>
   <meta charset="UTF-8">
   <title>Graph Strategy Game</title>
   <link rel="stylesheet" href="style.css">
