--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head <script src="https://cdn.jsdelivr.net/npm/d3-delaunay@6"></script>>
   <meta charset="UTF-8">
-  <title>Graph Straegy Game</title>
+  <title>Graph Game</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
