--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <script src="https://cdn.jsdelivr.net/npm/d3-delaunay@6"></script>
   <meta charset="UTF-8">
-  <title>Graph Game</title>
+  <title>Graph Strategy Gam</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
