--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://cdn.jsdelivr.net/npm/d3-delaunay@6"></script>
-  <meta charset="UTF-8">
-  <title>Graph Strategy Gam</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Graph Strategy Game</title>
 </head>
 <body>
 
-<h1>Graph Strategy Game</h1>
+<canvas id="gameCanvas" width="900" height="600" style="border:1px solid black;"></canvas>
 
-<svg id="map"></svg>
-
+<script src="https://cdn.jsdelivr.net/npm/d3-delaunay@6"></script>
 <script src="main.js"></script>
+
 </body>
 </html>
