--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <canvas id="gameCanvas" width="900" height="600" style="border:1px solid black;"></canvas>
 
-<script src="https://cdn.jsdelivr.net/npm/d3-delaunay@6"></script>
+<script src="main.js?v=2"></script>
 <script src="main.js"></script>
 
 </body>
