--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 
 <canvas id="gameCanvas" width="900" height="600" style="border:1px solid black;"></canvas>
 
-<script src="main.js?v=2"></script>
+<!-- load D3 library first -->
+<script src="https://cdn.jsdelivr.net/npm/d3-delaunay@6"></script>
+
+<!-- then load your game code -->
 <script src="main.js"></script>
 
 </body>
 </html>
+
