--- a/index.html
+++ b/index.html
@@ -1,18 +1,51 @@
-<body style="margin:0; display:flex; font-family:Arial;">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Turn-Based Strategy Game</title>
+  <!-- Include D3 for Delaunay triangulation -->
+  <script src="https://d3js.org/d3-delaunay.v6.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+    }
+    canvas {
+      border: 1px solid black;
+      background-color: white;
+    }
+    #inspector {
+      width: 100%;
+      height: 200px;
+      border: 1px solid black;
+      padding: 10px;
+      background-color: #fff;
+      box-sizing: border-box;
+    }
+    #controls {
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
 
-  <!-- Map on the left -->
-  <canvas id="gameCanvas" width="800" height="600" style="border:1px solid black;"></canvas>
+  <!-- Map -->
+  <canvas id="gameCanvas" width="800" height="600"></canvas>
 
-  <!-- Inspector on the right -->
+  <!-- Inspector panel -->
   <div style="margin-left:20px; width:250px;">
-    <div id="inspector" style="width:100%; height:200px; border:1px solid black; padding:10px;">
+    <div id="inspector">
       Click a city to see details
     </div>
-    <div style="margin-top:10px;">
+    <div id="controls">
       Move units: <input type="number" id="moveCount" min="1" value="1" style="width:50px;">
     </div>
   </div>
 
-  <!-- Script at the end so DOM elements exist -->
+  <!-- Main JS -->
   <script src="main.js"></script>
+
 </body>
+</html>
