--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Turn-Based Strategy Game</title>
   <!-- Include D3 for Delaunay triangulation -->
-  <script src="https://d3js.org/d3-delaunay.v6.min.js"></script>
   <style>
     body {
       margin: 0;
@@ -44,8 +43,10 @@
     </div>
   </div>
 
-  <!-- Main JS -->
-  <script src="main.js"></script>
+ <!-- D3 first -->
+<script src="https://d3js.org/d3-delaunay.v6.min.js"></script>
+<!-- Then your game code -->
+<script src="main.js"></script>
 
 </body>
 </html>
