--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     </div>
     <div id="controls">
       Move units: <input type="number" id="moveCount" min="1" value="1" style="width:50px;">
+      <button id="endTurnButton" style="margin-top:10px;">
+Finish Turn
+</button>
     </div>
   </div>
 
