--- a/index.html
+++ b/index.html
@@ -1,54 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Turn-Based Strategy Game</title>
-  <!-- Include D3 for Delaunay triangulation -->
-  <style>
-    body {
-      margin: 0;
-      display: flex;
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-    }
-    canvas {
-      border: 1px solid black;
-      background-color: white;
-    }
-    #inspector {
-      width: 100%;
-      height: 200px;
-      border: 1px solid black;
-      padding: 10px;
-      background-color: #fff;
-      box-sizing: border-box;
-    }
-    #controls {
-      margin-top: 10px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Strategy Graph Game</title>
+
+<script src="https://d3js.org/d3-delaunay.v6.min.js"></script>
+
+<style>
+body {
+  margin: 0;
+  display: flex;
+  font-family: Arial, sans-serif;
+  background: #f0f0f0;
+}
+
+canvas {
+  border: 1px solid black;
+  background: white;
+}
+
+#panel {
+  margin-left: 20px;
+  width: 260px;
+}
+
+#inspector {
+  border: 1px solid black;
+  background: white;
+  padding: 10px;
+  height: 200px;
+}
+
+#controls {
+  margin-top: 10px;
+}
+</style>
 </head>
+
 <body>
 
-  <!-- Map -->
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
+<canvas id="gameCanvas" width="800" height="600"></canvas>
 
-  <!-- Inspector panel -->
-  <div style="margin-left:20px; width:250px;">
-    <div id="inspector">
-      Click a city to see details
-    </div>
-    <div id="controls">
-      Move units: <input type="number" id="moveCount" min="1" value="1" style="width:50px;">
-      <button id="endTurnButton" style="margin-top:10px;">
-Finish Turn
-</button>
-    </div>
+<div id="panel">
+  <div id="inspector">
+    Click a city to see details
   </div>
 
- <!-- D3 first -->
-<script src="https://d3js.org/d3-delaunay.v6.min.js"></script>
-<!-- Then your game code -->
+  <div id="controls">
+    Move units:
+    <input type="number" id="moveCount" min="0" value="1" style="width:60px;">
+  </div>
+
+  <button id="endTurnButton" style="margin-top:10px;">
+    Finish Turn
+  </button>
+</div>
+
 <script src="main.js"></script>
 
 </body>
