--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ button {
   </div>
 </div>
 
-<script src="game.js"></script>
-
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
