--- a/index.html
+++ b/index.html
@@ -49,6 +49,5 @@ button {
 </div>
 
 <script src="https://d3js.org/d3.v7.min.js"></script>
-<script src="main.js"></script>
-</body>
+<script src="game.js" defer></script></body>
 </html>
