--- a/index.html
+++ b/index.html
@@ -2,51 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Strategy Graph Game</title>
-
-<style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
-#container {
-  display: flex;
-  height: 100vh;
-}
-
-#map {
-  background: white;
-  border: 1px solid black;
-  flex-grow: 1;
-}
-
-#sidebar {
-  width: 260px;
-  border-left: 1px solid black;
-  padding: 10px;
-  box-sizing: border-box;
-  background: #f5f5f5;
-}
-
-#inspector {
-  margin-bottom: 12px;
-}
-
-button {
-  margin-top: 6px;
-  width: 100%;
-}
-
-input {
-  width: 100%;
-  margin-top: 4px;
-}
-</style>
-
-<!-- Load the game script AFTER the DOM is parsed -->
+<title>Graph Strategy Game</title>
+<link rel="stylesheet" href="style.css">
 <script src="game.js" defer></script>
-
 </head>
 
 <body>
@@ -62,11 +20,10 @@ input {
     Select a city
   </div>
 
-  <label>Units to move:</label>
+  <label>Units to move</label>
   <input id="moveAmount" type="number" value="1" min="1">
 
   <button id="moveButton">Move Units</button>
-
   <button id="finishTurn">Finish Turn</button>
 
   <hr>
