--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Graph Strategy Game</title>
 <link rel="stylesheet" href="style.css">
-<script src="game.js" defer></script>
+<script src="main.js" defer></script>
 </head>
 
 <body>
