--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Turn-Based Graph Game</title>
+  <title>Planar Map Turn-Based Game</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h2>Turn-Based Graph Game</h2>
+<h2>Planar Map Turn-Based Game</h2>
 <div id="container">
   <svg id="map" width="800" height="600"></svg>
 
