--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Planar Map Turn-Based Game</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Planar Map Turn-Based Game</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -22,6 +22,7 @@
   </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/delaunator@5.0.0/delaunator.min.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
