--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Hex Map Game</title>
-<link rel="stylesheet" href="style.css">
+<title>Strategy Map Prototype</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="game-container">
-  <svg id="map" width="800" height="600"></svg>
-  <div id="inspector">
-    <h3>City Inspector</h3>
-    <div id="node-info">Click a node to see details.</div>
-  </div>
+
+<div id="gameContainer">
+  <canvas id="mapCanvas"></canvas>
 </div>
-<script src="main.js"></script>
+
+<script src="game.js"></script>
 </body>
 </html>
