--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
 </head>
 <body>
 
-<div id="gameContainer">
+<div id="layout">
   <canvas id="gameCanvas"></canvas>
 
   <div id="sidePanel">
     <h2>City Inspector</h2>
-    <div id="cityInfo">
-      Click a city
-    </div>
-
+    <div id="cityInfo">Click a city</div>
     <button id="moveButton">Move</button>
   </div>
 </div>
 
-<script src="main.js"></script>
+<script src="game.js"></script>
 </body>
 </html>
